# hightale

./: .gitignore  Cargo.toml
crates/assets/: Cargo.toml
crates/assets/src/: asset.rs  codec.rs  error.rs  event.rs  index.rs  lib.rs  query.rs  store.rs  types.rs  validate.rs
crates/command/: Cargo.toml
crates/command/src/: args.rs  context.rs  lib.rs  macros.rs  node.rs  registry.rs
crates/common_assets/: Cargo.toml
crates/common_assets/src/: common_asset.rs  lib.rs  loader.rs  store.rs
crates/macros/: Cargo.toml
crates/macros/src/: define_packet.rs  lib.rs
crates/net/: Cargo.toml
crates/net/src/: api.rs  auth.rs  auth_store.rs  connection.rs  lib.rs  oauth.rs  server.rs  tls.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: codec.rs  lib.rs  macros.rs  packets.rs  v1.rs  v2.rs
crates/protocol/src/packets/: v1.rs
crates/protocol/src/packets/v1/: auth.rs  camera.rs  connection.rs  entities.rs  interaction.rs  interface.rs  inventory.rs  machinima.rs  player.rs  serveraccess.rs  setup.rs  window.rs  world.rs  worldmap.rs
crates/protocol/src/v1/: objects.rs  packets.rs
crates/protocol/src/v1/objects/: ambience.rs  basic.rs  interaction.rs
crates/protocol/src/v1/packets/: asseteditor.rs  assets.rs  auth.rs  buildertools.rs  camera.rs  connection.rs  entities.rs  interaction.rs  interface.rs  inventory.rs  machinima.rs  player.rs  serveraccess.rs  setup.rs  window.rs  world.rs  worldmap.rs
crates/protocol/src/v2/: objects.rs  packets.rs
crates/protocol/src/v2/objects/: ambience.rs  basic.rs  interaction.rs  selector.rs
crates/protocol/src/v2/packets/: asseteditor.rs  assets.rs  auth.rs  buildertools.rs  camera.rs  connection.rs  entities.rs  interaction.rs  interface.rs  inventory.rs  machinima.rs  player.rs  serveraccess.rs  setup.rs  window.rs  world.rs  worldmap.rs
crates/protocol_macros/: Cargo.toml
crates/protocol_macros/src/: define_packet.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: assets.rs  commands.rs  console.rs  lib.rs  options.rs
crates/server/src/commands/: auth.rs  help.rs  stop.rs
crates/server/src/console/: sender.rs  writer.rs
src/: main.rs
