[package]
name = "net"
version.workspace = true
edition.workspace = true

[dependencies]
quinn.workspace = true
rcgen.workspace = true
rustls.workspace = true
tokio.workspace = true
reqwest.workspace = true
base64.workspace = true
uuid.workspace = true
chrono.workspace = true

tracing.workspace = true

anyhow.workspace = true
thiserror.workspace = true

serde.workspace = true
serde_json.workspace = true

parking_lot.workspace = true
sha2.workspace = true
bytes.workspace = true
hex.workspace = true

protocol.workspace = true

tiny_http.workspace = true
rand.workspace = true
url.workspace = true
urlencoding.workspace = true
zstd.workspace = true