[package]
name = "protocol"
version.workspace = true
edition.workspace = true

[dependencies]
bytes.workspace = true
uuid = { workspace = true, features = ["serde"] }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
ordered-float.workspace = true
macros.workspace = true


